# Businesse-Ai-Assistant

./: .env.example  .gitignore  FRONTEND_INTEGRATION_PROMPT.md  README.md  alembic.ini  docker-compose.yml  inspect_db.py  pyproject.toml  tmp_git_inspect.txt
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 6f4bb7b3ad91_make_user_fields_nullable_for_otp_login.py  8c2f9d8b7a1c_create_users_and_businesses_tables.py  a1b2c3d4e5f6_add_category_to_inventory.py  a3f1c9d2e845_add_items_pending_amount_is_credit_to_transactions.py  b2d4f8a1c3e6_add_user_type_to_users_and_location_to_businesses.py  b7f9c2a4d6e1_add_device_tokens_table.py  c1a8f4e2b9d3_add_notification_logs_table.py  c4d7e8f9a2b1_create_chat_tables.py  d91b4e7c2a11_add_whatsapp_reminders.py  e5a2c1f8b3d9_add_shop_type_to_businesses.py  f1c3e7a92b44_create_otp_codes_table.py  f3b9d2e1c7a8_add_inventory_table.py
app/: main.py
app/core/: auth.py  config.py  database.py  deep.py  redis.py
app/models/: __init__.py  business.py  customer.py  device_token.py  inventory.py  message_log.py  notification_log.py  otp_code.py  reminder_log.py  transaction.py  user.py
app/schemas/: auth.py  chat.py  customers.py  home.py  inventory.py  notifications.py  reminders.py
app/services/: ai_service.py  ai_tools.py  auth_service.py  (+16 more)
data/: intent_templates.json  intent_training_data.jsonl
scripts/: finetune_intent.py  generate_training_data.py  import_inventory_xlsx.py
tests/: conftest.py  test_chat.py  test_inventory_service.py  test_profile.py  test_profile_push_token.py  test_reminder_service.py
(+9 files in other folders)
